test: Fix compatibility with Java 8